--- a/privacy.html
+++ b/privacy.html
@@ -247,10 +247,10 @@
 				<li>Occupation/role at the company or organization you represent</li>
 				<li>Name and contact details of the company or organization you represent</li>
 				</ul></td>
-			<td class="table-cell3">LEGITIMATE INTEREST & A CONTRACT</td>
-			<td class="table-cell">Before we have agreed upon collaboration we process your publicly available personal data based on the basis of  our legitimate interest for the purpose of contacting you and possibly entering into an agreement with you.<br><br>
-				When we have agreed upon collaboration we will process your personal information based on the agreement between us in order to fill our obligations to you.<br><br>
-				After the Summit, based on our legitimate interest, we might contact you to request feedback of the Summit or to inquire on your interest in entering into a new partnership in the future .</td>
+			<td class="table-cell3">LEGITIMATE INTERESTS</td>
+			<td class="table-cell">When you are a representative of our partner, we process your personal data on the basis of legitimate interest.  Before we have agreed upon collaboration we process your publicly available personal data for the purpose of contacting you and possibly entering into an agreement with you.<br><br>
+				When we have agreed upon collaboration we will process your personal information in order to fill our obligations to the entity that you represent.<br><br>
+				After the Summit we might contact you to request feedback regarding the Summit or to inquire about your interest in entering into a new partnership in the future.</td>
 			<td class="table-cell">2,5 years*</td>
 		  </tr>
 		  <tr style="background-color: #50cec1; color:white; font-weight: bold;">
