--- a/about-us.html
+++ b/about-us.html
@@ -28,6 +28,24 @@
     <script type="text/javascript" src="scripts/main.js"></script>
 
     <title>Legal Design Summit</title>
+    <style>
+      .team .image {
+        width: 225px;
+        height: 225px;
+        border-radius: 50%;
+        overflow: hidden;
+        margin: auto;
+      }
+
+      @media only screen and (max-width: 767px) {
+        .flex-item {
+          width: 100%;
+          margin: 10px 0;
+        }
+      }
+
+
+    </style>
 
   </head>
 
@@ -104,74 +122,70 @@
 
 	    </p>
 
-
 	    <div class="team">
 
 	      <div class="row equalize">
 
 
-		<div class="col-xs-12 col-md-6">
-		  		    <div class="justify-center">
-		      <h3 style="font-size: 20px;">
-			Partnerships
-		      </h3>
-		    </div>
-
-		  <div class="col-xs-6 col-md-6">
-		    <div class="image"><a href="mailto:partnerships@legaldesignsummit.com"><img src="images/team/team-2023/petro-vornanen.jpg"></a></div>
-		    <p>Petro Vornanen<br><span class="small"></p>
-		    <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/petrovornanen/" class="icon linkedin">LinkedIn</a></span></p>
-</div>
-<div class="col-xs-6 col-md-6">
-  <div class="image"><a href="mailto:partnerships@legaldesignsummit.com"><img src="images/team/team-2023/vakkala-vilma.jpg"></a></div>
-  <p>Vilma Vakkala<br><span class="small"></p>
-  <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/vilmavakkala/" class="icon linkedin">LinkedIn</a></span></p>
-</div>
-</div>
 <div class="col-xs-12 col-md-6">
-<div class="col-xs-6 col-md-6">
-  <div class="justify-center"> <h3 style="font-size: 20px;">Speakers</h3></div>
-  <div class="image"><a href="mailto:speakers@legaldesignsummit.com"><img src="images/team/team-2023/mantyla-sade.jpg"></a></div>
-  <p>Sade Mäntylä<br><span class="small"></p>
-  <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/sademantyla/" class="icon linkedin">LinkedIn</a></span></p>
-</div>
-<div class="col-xs-6 col-md-6">
-  <div class="justify-center"> <h3 style="font-size: 20px;">Communications</h3></div>
-  <div class="image"><a href="mailto:marika.nieminen@legaldesignsummit.com"><img src="images/team/team-2023/marika-nieminen.jpg"></a></div>
-  <p>Marika Nieminen<br><span class="small"></p>
-  <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/marikapnieminen/" class="icon linkedin">LinkedIn</a></span></p>
-</div>
-</div>
-
-
-
-<div class="col-xs-12 col-md-6">
-<div class="justify-center"> <h3 style="font-size: 20px;">Brainfactory</h3></div>
-<div class="col-xs-6 col-md-6">
-  <div class="image"><a href="mailto:brainfactory@legaldesignsummit.com"><img src="images/team/team-2023/andrea-lindblom.png"></a></div>
-  <p>Andrea Lindblom<br><span class="small"></p>
-  <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/andrea-lindblom/" class="icon linkedin">LinkedIn</a></span></p>
-</div>
-<div class="col-xs-6 col-md-6">
-  <div class="image"><a href="mailto:brainfactory@legaldesignsummit.com"><img src="images/team/team-2023/mia-ihamoutila.jpg"></a></div>
-  <p>Mia Ihamuotila<br><span class="small"></p>
-  <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/mia-ihamuotila/" class="icon linkedin">LinkedIn</a></span></p>
-</div>
+	<div class="justify-center">
+		<h3 style="font-size: 20px;">Partnerships</h3>
+	</div>
+	<div class="col-xs-6 col-md-6">
+		<div class="image"><a href="mailto:partnerships@legaldesignsummit.com"><img src="images/team/team-2023/petro-vornanen.jpg"></a></div>
+		<p>Petro Vornanen<br><span class="small"></p>
+		<p class="margin-bottom-0"><a href="https://www.linkedin.com/in/petrovornanen/" class="icon linkedin">LinkedIn</a></span></p>
+  </div>
+  <div class="col-xs-6 col-md-6">
+    <div class="image"><a href="mailto:partnerships@legaldesignsummit.com"><img src="images/team/team-2023/vakkala-vilma.jpg"></a></div>
+    <p>Vilma Vakkala<br><span class="small"></p>
+    <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/vilmavakkala/" class="icon linkedin">LinkedIn</a></span></p>
+  </div>
 </div>
 
 <div class="col-xs-12 col-md-6">
-<div class="justify-center"> <h3 style="font-size: 20px;">Production & Tickets</h3></div>
-<div class="col-xs-6 col-md-6">
-  <div class="image"><a href="mailto:werner.herajarvi@legaldesignsummit.com"><img src="images/team/team-2023/herajarvi-werner.jpg"></a></div>
-  <p>Werner Herajärvi<br><span class="small"></p>
-  <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/wernerherajarvi/" class="icon linkedin">LinkedIn</a></span></p>
+  <div class="col-xs-6 col-md-6">
+    <div class="justify-center"> <h3 style="font-size: 20px;">Speakers</h3></div>
+    <div class="image"><a href="mailto:speakers@legaldesignsummit.com"><img src="images/team/team-2023/mantyla-sade.jpg"></a></div>
+    <p>Sade Mäntylä<br><span class="small"></p>
+    <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/sademantyla/" class="icon linkedin">LinkedIn</a></span></p>
+  </div>
+  <div class="col-xs-6 col-md-6">
+    <div class="justify-center"> <h3 style="font-size: 20px;">Communications</h3></div>
+    <div class="image"><a href="mailto:marika.nieminen@legaldesignsummit.com"><img src="images/team/team-2023/marika-nieminen.jpg"></a></div>
+    <p>Marika Nieminen<br><span class="small"></p>
+    <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/marikapnieminen/" class="icon linkedin">LinkedIn</a></span></p>
+  </div>
 </div>
-<div class="col-xs-6 col-md-6">
-  <div class="image"><a href="mailto:artttu.mielonen@legaldesignsummit.com"><img src="images/team/team-2023/arttu-mielonen.jpg"></a></div>
-  <p>Arttu Mielonen<br><span class="small"></p>
-  <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/arttu-mielonen-083402124/" class="icon linkedin">LinkedIn</a></span></p>
+
+<div class="col-xs-12 col-md-6">
+  <div class="justify-center"><h3 style="font-size: 20px;">Brainfactory</h3></div>
+  <div class="col-xs-6 col-md-6">
+    <div class="image"><a href="mailto:brainfactory@legaldesignsummit.com"><img src="images/team/team-2023/andrea-lindblom.png"></a></div>
+    <p>Andrea Lindblom<br><span class="small"></span></p>
+    <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/andrea-lindblom/" class="icon linkedin">LinkedIn</a></p>
+  </div>
+  <div class="col-xs-6 col-md-6">
+    <div class="image"><a href="mailto:brainfactory@legaldesignsummit.com"><img src="images/team/team-2023/mia-ihamoutila.jpg"></a></div>
+    <p>Mia Ihamuotila<br><span class="small"></span></p>
+    <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/mia-ihamuotila/" class="icon linkedin">LinkedIn</a></p>
+  </div>
 </div>
+
+<div class="col-xs-12 col-md-6">
+  <div class="justify-center"><h3 style="font-size: 20px;">Production & Tickets</h3></div>
+  <div class="col-xs-6 col-md-6">
+    <div class="image"><a href="mailto:werner.herajarvi@legaldesignsummit.com"><img src="images/team/team-2023/herajarvi-werner.jpg"></a></div>
+    <p>Werner Herajärvi<br><span class="small"></span></p>
+    <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/wernerherajarvi/" class="icon linkedin">LinkedIn</a></p>
+  </div>
+  <div class="col-xs-6 col-md-6">
+    <div class="image"><a href="mailto:artttu.mielonen@legaldesignsummit.com"><img src="images/team/team-2023/arttu-mielonen.jpg"></a></div>
+    <p>Arttu Mielonen<br><span class="small"></p>
+    <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/arttu-mielonen-083402124/" class="icon linkedin">LinkedIn</a></span></p>
+  </div>
 </div>
+
 
 <div class="justify-center"> <h3 style="font-size: 20px;">CXO's</h3></div>
 <div class="col-xs-12 col-md-6">
@@ -219,7 +233,7 @@
 </div>
 </div>
 </div>
-
+-->
 <div class="small padding-top-30"></div>
 
 <h2>2019 Volunteers</h2>
