--- a/index.html
+++ b/index.html
@@ -447,6 +447,7 @@
 	<li class="flex-item" style="width: 250px;"><a href="https://www.epj.es/" target="_blank"><img src="images/collabs/Escuela-de-Practica-Juridica.png"></a></li>
 	<li class="flex-item" style="width: 250px;"><a href="https://www.linkedin.com/company/think-legaltech/?viewAsMember=true" target="_blank"><img src="images/collabs/thinklegaltech.png"></a></li>
 	<li class="flex-item"><a href="https://www.legaltechdesign.com/" target="_blank"><img src="images/collabs/stanford.png"></a></li>
+	<li class="flex-item"><a href="https://www.eui.eu/en/home/" target="_blank"><img src="images/collabs/LOGO-EUI-full.png"></a></li>
   </ul>
 
 </div>
