Added logo for tuomioistuinvirasto

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       }  .flex-item {
         padding: 20px;
         margin: 10px;
-        width: 220px;
-        height: 220px;
+        width: 240px;
+        height: 150px;
         line-height: 100px;
         text-align: center;
         justify-content: center;
@@ -448,6 +448,7 @@
 	<li class="flex-item" style="width: 250px;"><a href="https://www.linkedin.com/company/think-legaltech/?viewAsMember=true" target="_blank"><img src="images/collabs/thinklegaltech.png"></a></li>
 	<li class="flex-item"><a href="https://www.legaltechdesign.com/" target="_blank"><img src="images/collabs/stanford.png"></a></li>
 	<li class="flex-item"><a href="https://www.eui.eu/en/home/" target="_blank"><img src="images/collabs/LOGO-EUI-full.png"></a></li>
+	<li class="flex-item" style="width: 300px;"><a href="https://tuomioistuinvirasto.fi/en/index.html" target="_blank"><img src="images/collabs/tuomioistuinvirasto.png"></a></li>
   </ul>
 
 </div>
