updated about us page to include Eero, added to sponsors, fixed instagram icon link

--- a/index.html
+++ b/index.html
@@ -449,6 +449,8 @@
 	<li class="flex-item"><a href="https://www.legaltechdesign.com/" target="_blank"><img src="images/collabs/stanford.png"></a></li>
 	<li class="flex-item"><a href="https://www.eui.eu/en/home/" target="_blank"><img src="images/collabs/LOGO-EUI-full.png"></a></li>
 	<li class="flex-item" style="width: 300px;"><a href="https://tuomioistuinvirasto.fi/en/index.html" target="_blank"><img src="images/collabs/tuomioistuinvirasto.png"></a></li>
+	<li class="flex-item" style="width: 215px;"><a href="https://juristiliitto.fi/" target="_blank"><img src="images/collabs/Juristiliitto.png"></a></li>
+	<li class="flex-item" style="width: 175px;"><a href="https://asianajajaliitto.fi/" target="_blank"><img src="images/collabs/Asianajajaliitto.png"></a></li>
   </ul>
 
 </div>
@@ -468,7 +470,7 @@
 	  <div class="row col">
 	    <a href="https://www.linkedin.com/company/10936008/" class="icon linkedin col-3 margin-right-5" target="_blank">LinkedIn</a>
 	    <a href="https://www.facebook.com/legaldesignsummit/" class="icon facebook col-3 margin-right-5 margin-left-5" target="_blank">Facebook</a>
-	    <a href="https://www.instagram.com/legaldesignfi/" class="icon instagram col-3 margin-right-5 margin-left-5" target="_blank">Instagram</a>
+	    <a href="https://www.instagram.com/legaldesignsummit/" class="icon instagram col-3 margin-right-5 margin-left-5" target="_blank">Instagram</a>
 	    <a href="https://twitter.com/legaldesignFI" class="icon twitter col-3 margin-left-5" target="_blank">Twitter</a>
 	  </div>
 	</div>
