--- a/about-us.html
+++ b/about-us.html
@@ -30,16 +30,15 @@
     <title>Legal Design Summit</title>
     <style>
       .team .image {
-        width: 225px;
-        height: 225px;
         border-radius: 50%;
+        max-width: 250px;
         overflow: hidden;
         margin: auto;
       }
 
       @media only screen and (max-width: 767px) {
         .flex-item {
-          width: 100%;
+          width: 25%;
           margin: 10px 0;
         }
       }
@@ -122,119 +121,125 @@
 
 	    </p>
 
-	    <div class="team">
+      <div class="container">
+        <div class="row justify-content-md-center" style="margin-left: 35px; margin-right: 35px;">
+          <div class="col-md-8" style=" padding-left: 0px; padding-right: 0px;">
+            <h3 style="font-size: 25px;">Partnerships</h3>
+            <div class="col-md-6">
+              <div class="image"><a href="mailto:partnerships@legaldesignsummit.com"><img src="images/team/team-2023/petro-vornanen.jpg"></a></div>
+              <p>Petro Vornanen<br><span class="small"></p>
+              <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/petrovornanen/" class="icon linkedin">LinkedIn</a></span></p>
+            </div>
+            <div class="col-md-6">
+              <div class="image"><a href="mailto:partnerships@legaldesignsummit.com"><img src="images/team/team-2023/vakkala-vilma.jpg"></a></div>
+              <p>Vilma Vakkala<br><span class="small"></p>
+              <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/vilmavakkala/" class="icon linkedin">LinkedIn</a></span></p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <h3 style="font-size: 25px;">Speakers</h3>
+            <div class="image"><a href="mailto:speakers@legaldesignsummit.com"><img src="images/team/team-2023/mantyla-sade-2.jpeg"></a></div>
+            <p>Sade Mäntylä<br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/sademantyla/" class="icon linkedin">LinkedIn</a></span></p>
+          </div>  
+        </div>
 
-	      <div class="row equalize">
+        <div class="row justify-content-md-center" style="margin-top: 30px; margin-left: 35px; margin-right: 35px;">
+          <div class="col-md-8 col-xs-12" style=" padding-left: 0px; padding-right: 0px;">
+            <h3 style="font-size: 25px;">Brainfactory</h3>
+            <div class="col-md-6">
+              <div class="image"><a href="mailto:brainfactory@legaldesignsummit.com"><img src="images/team/team-2023/andrea-lindblom.png"></a></div>
+              <p>Andrea Lindblom<br><span class="small"></span></p>
+              <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/andrea-lindblom/" class="icon linkedin">LinkedIn</a></p>
+            </div>
+            <div class="col-md-6">
+              <div class="image"><a href="mailto:brainfactory@legaldesignsummit.com"><img src="images/team/team-2023/mia-ihamoutila.jpg"></a></div>
+              <p>Mia Ihamuotila<br><span class="small"></span></p>
+              <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/mia-ihamuotila/" class="icon linkedin">LinkedIn</a></p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="justify-center"> <h3 style="font-size: 25px;">Communications</h3></div>
+            <div class="image"><a href="mailto:marika.nieminen@legaldesignsummit.com"><img src="images/team/team-2023/marika-nieminen.jpg"></a></div>
+            <p>Marika Nieminen<br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/marikapnieminen/" class="icon linkedin">LinkedIn</a></span></p>
+          </div>          
+
+        </div>
+
+        <div class="row justify-content-md-center" style="margin-top: 30px; margin-left: 35px; margin-right: 35px;">
+          <div class="col-md-8 col-xs-12" style=" padding-left: 0px; padding-right: 0px;">
+            <h3 style="font-size: 25px;">Production & Tickets</h3>
+            <div class="col-md-6">
+            <div class="image"><a href="mailto:werner.herajarvi@legaldesignsummit.com"><img src="images/team/team-2023/herajarvi-werner.jpg"></a></div>
+            <p>Werner Herajärvi<br><span class="small"></span></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/wernerherajarvi/" class="icon linkedin">LinkedIn</a></p>
+            </div>
+            <div class="col-md-6">
+              <div class="image"><a href="mailto:artttu.mielonen@legaldesignsummit.com"><img src="images/team/team-2023/arttu-mielonen.jpg"></a></div>
+              <p>Arttu Mielonen<br><span class="small"></p>
+              <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/arttu-mielonen-083402124/" class="icon linkedin">LinkedIn</a></span></p>
+            </div>
+          </div>
+          <div class="col-md-4 col-xs-12">
+            <div class="justify-center"> <h3 style="font-size: 25px;">Website</h3></div>
+            <div class="image"><a href="mailto:marika.nieminen@legaldesignsummit.com"><img src="images/team/team-2023/eero-kemppinen.jpg"></a></div>
+            <p>Eero Kemppinen<br><span class="small"></p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/eero-kemppinen-181982234/" class="icon linkedin">LinkedIn</a></span></p>
+          </div>
+        </div>
+
+        <div class="row justify-content-md-center" style="margin-top: 60px;">
+          <h3 style="font-size: 25px;">CXO's</h3></div>
+          <div class="col-md-6 col-lg-3 col-xs-12">
+            <div class="image"><a href="mailto:niina.putkonen@legaldesignsummit.com"><img src="images/team/team-2023/niina_putkonen.jpeg"></a></div>
+            <p>Niina Putkonen<br><span class="small">CCO</p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/niina-putkonen-6407ba172/" class="icon linkedin">LinkedIn</a></span></p>
+          </div>
+          <div class="col-md-6 col-lg-3 col-xs-12">
+            <div class="image"><a href="mailto:juulia.lehtinen@legaldesignsummit.com"><img src="images/team/team-2023/lehtinen-juulia.jpeg"></a></div>
+            <p>Juulia Lehtinen<br><span class="small">CFO</p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/juulia-lehtinen-0854577b/" class="icon linkedin">LinkedIn</a></span></p>
+          </div>
+          <div class="col-md-6 col-lg-3 col-xs-12">
+            <div class="image"><a href="mailto:maria.ahmas@legaldesignsummit.com"><img src="images/team/team-2023/maria-ahmas.png"></a></div>
+            <p>Maria Ahmas<br><span class="small">CPO</p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/mariaahmas/" class="icon linkedin">LinkedIn</a></span></p>
+          </div>
+          <div class="col-md-6 col-lg-3 col-xs-12">
+            <div class="image"><a href="mailto:malin.mannikko@legaldesignsummit.com"><img src="images/team/team-2023/mannikko_malin.jpg"></a></div>
+            <p>Malin Männikkö<br><span class="small">COO</p>
+            <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/malinmannikko/" class="icon linkedin">LinkedIn</a></span></p>
+          </div>
+        </div>
 
 
-<div class="col-xs-12 col-md-6">
-	<div class="justify-center">
-		<h3 style="font-size: 20px;">Partnerships</h3>
-	</div>
-	<div class="col-xs-6 col-md-6">
-		<div class="image"><a href="mailto:partnerships@legaldesignsummit.com"><img src="images/team/team-2023/petro-vornanen.jpg"></a></div>
-		<p>Petro Vornanen<br><span class="small"></p>
-		<p class="margin-bottom-0"><a href="https://www.linkedin.com/in/petrovornanen/" class="icon linkedin">LinkedIn</a></span></p>
-  </div>
-  <div class="col-xs-6 col-md-6">
-    <div class="image"><a href="mailto:partnerships@legaldesignsummit.com"><img src="images/team/team-2023/vakkala-vilma.jpg"></a></div>
-    <p>Vilma Vakkala<br><span class="small"></p>
-    <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/vilmavakkala/" class="icon linkedin">LinkedIn</a></span></p>
-  </div>
-</div>
-
-<div class="col-xs-12 col-md-6">
-  <div class="col-xs-6 col-md-6">
-    <div class="justify-center"> <h3 style="font-size: 20px;">Speakers</h3></div>
-    <div class="image"><a href="mailto:speakers@legaldesignsummit.com"><img src="images/team/team-2023/mantyla-sade.jpg"></a></div>
-    <p>Sade Mäntylä<br><span class="small"></p>
-    <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/sademantyla/" class="icon linkedin">LinkedIn</a></span></p>
-  </div>
-  <div class="col-xs-6 col-md-6">
-    <div class="justify-center"> <h3 style="font-size: 20px;">Communications</h3></div>
-    <div class="image"><a href="mailto:marika.nieminen@legaldesignsummit.com"><img src="images/team/team-2023/marika-nieminen.jpg"></a></div>
-    <p>Marika Nieminen<br><span class="small"></p>
-    <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/marikapnieminen/" class="icon linkedin">LinkedIn</a></span></p>
-  </div>
-</div>
-
-<div class="col-xs-12 col-md-6">
-  <div class="justify-center"><h3 style="font-size: 20px;">Brainfactory</h3></div>
-  <div class="col-xs-6 col-md-6">
-    <div class="image"><a href="mailto:brainfactory@legaldesignsummit.com"><img src="images/team/team-2023/andrea-lindblom.png"></a></div>
-    <p>Andrea Lindblom<br><span class="small"></span></p>
-    <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/andrea-lindblom/" class="icon linkedin">LinkedIn</a></p>
-  </div>
-  <div class="col-xs-6 col-md-6">
-    <div class="image"><a href="mailto:brainfactory@legaldesignsummit.com"><img src="images/team/team-2023/mia-ihamoutila.jpg"></a></div>
-    <p>Mia Ihamuotila<br><span class="small"></span></p>
-    <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/mia-ihamuotila/" class="icon linkedin">LinkedIn</a></p>
-  </div>
-</div>
-
-<div class="col-xs-12 col-md-6">
-  <div class="justify-center"><h3 style="font-size: 20px;">Production & Tickets</h3></div>
-  <div class="col-xs-6 col-md-6">
-    <div class="image"><a href="mailto:werner.herajarvi@legaldesignsummit.com"><img src="images/team/team-2023/herajarvi-werner.jpg"></a></div>
-    <p>Werner Herajärvi<br><span class="small"></span></p>
-    <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/wernerherajarvi/" class="icon linkedin">LinkedIn</a></p>
-  </div>
-  <div class="col-xs-6 col-md-6">
-    <div class="image"><a href="mailto:artttu.mielonen@legaldesignsummit.com"><img src="images/team/team-2023/arttu-mielonen.jpg"></a></div>
-    <p>Arttu Mielonen<br><span class="small"></p>
-    <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/arttu-mielonen-083402124/" class="icon linkedin">LinkedIn</a></span></p>
-  </div>
-</div>
+        </div>
+        
+        <div class="row justify-content-md-center" style="margin-top: 60px; margin-left: 35px; margin-right: 35px;">
+            <h3 style="font-size: 25px;">Board & Advisors</h3>
+            <div class="col-md-4">
+              <div class="image"><a href="mailto:pilvi.alopaeus@legaldesignsummit.com"><img src="images/team/team-2023/pilvi.jpeg"></a></div>
+              <p>Pilvi Alopaeus<br><span class="small">The Pilvi - Founder and Advisor</p>
+              <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/pilvialopaeus/" class="icon linkedin">LinkedIn</a></span></p>
+            </div>
+            <div class="col-md-4">
+              <div class="image"><a href="mailto:noora.rissanen@legaldesignsummit.com"><img src="images/team/team-2023/noora-rissanen.jpg"></a></div>
+              <p>Noora Rissanen<br><span class="small">President of the Board</p>
+              <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/noorarissanen/" class="icon linkedin">LinkedIn</a></span></p>
+            </div>
+            <div class="col-md-4">
+              <div class="image"><img src="images/team/team-2023/kojo-sonja.png"></div>
+              <p>Sonja Kojo<br><span class="small">Senior Advisor</p>
+              <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/sonjakojo/" class="icon linkedin">LinkedIn</a></span></p>
+            </div>
+        </div>
+      </div>
 
 
-<div class="justify-center"> <h3 style="font-size: 20px;">CXO's</h3></div>
-<div class="col-xs-12 col-md-6">
-<div class="col-xs-6 col-md-6">
-  <div class="image"><a href="mailto:niina.putkonen@legaldesignsummit.com"><img src="images/team/team-2023/niina_putkonen.jpeg"></a></div>
-  <p>Niina Putkonen<br><span class="small">CCO</p>
-  <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/niina-putkonen-6407ba172/" class="icon linkedin">LinkedIn</a></span></p>
-</div>
-<div class="col-xs-6 col-md-6">
-  <div class="image"><a href="mailto:juulia.lehtinen@legaldesignsummit.com"><img src="images/team/team-2023/lehtinen-juulia.jpeg"></a></div>
-  <p>Juulia Lehtinen<br><span class="small">CFO</p>
-  <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/juulia-lehtinen-0854577b/" class="icon linkedin">LinkedIn</a></span></p>
-</div>
-</div>
-<div class="col-xs-12 col-md-6">
-<div class="col-xs-6 col-md-6">
-  <div class="image"><a href="mailto:maria.ahmas@legaldesignsummit.com"><img src="images/team/team-2023/maria-ahmas.png"></a></div>
-  <p>Maria Ahmas<br><span class="small">CPO</p>
-  <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/mariaahmas/" class="icon linkedin">LinkedIn</a></span></p>
-</div>
-<div class="col-xs-6 col-md-6">
-  <div class="image"><a href="mailto:malin.mannikko@legaldesignsummit.com"><img src="images/team/team-2023/mannikko_malin.jpg"></a></div>
-  <p>Malin Männikkö<br><span class="small">COO</p>
-  <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/malinmannikko/" class="icon linkedin">LinkedIn</a></span></p>
-</div>
-</div>
 
-<div class="justify-center"> <h3 style="font-size: 20px;">Board & Advisors</h3></div>
-<div class="col-xs-6 col-md-3">
-  <div class="image"><a href="mailto:pilvi.alopaeus@legaldesignsummit.com"><img src="images/team/team-2023/pilvi.jpeg"></a></div>
-  <p>Pilvi Alopaeus<br><span class="small">The Pilvi - Founder and Advisor</p>
-  <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/pilvialopaeus/" class="icon linkedin">LinkedIn</a></span></p>
-</div>
-<div class="col-xs-6 col-md-3">
-  <div class="image"><a href="mailto:noora.rissanen@legaldesignsummit.com"><img src="images/team/team-2023/noora-rissanen.jpg"></a></div>
-  <p>Noora Rissanen<br><span class="small">President of the Board</p>
-  <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/noorarissanen/" class="icon linkedin">LinkedIn</a></span></p>
-</div>
-<div class="col-xs-6 col-md-3">
-  <div class="image"><img src="images/team/team-2023/kojo-sonja.png"></div>
-  <p>Sonja Kojo<br><span class="small">Senior Advisor</p>
-  <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/sonjakojo/" class="icon linkedin">LinkedIn</a></span></p>
-</div>
-<div class="hidden-xs hidden-sm col-md-3">
-</div>
-</div>
-</div>
--->
-<div class="small padding-top-30"></div>
+
+<div class="small padding-top-30 justify-center">
 
 <h2>2019 Volunteers</h2>
 <p>Legal Design Summit is organized by volunteers</p>	
@@ -242,7 +247,6 @@
 
 </div>
 
-</div>
 
 <!-- Content Main Section Ends -->
 
@@ -274,7 +278,7 @@
 	  <div class="row col">
 	    <a href="https://www.linkedin.com/company/10936008/" class="icon linkedin col-3 margin-right-5" target="_blank">LinkedIn</a>
 	    <a href="https://www.facebook.com/legaldesignsummit/" class="icon facebook col-3 margin-right-5 margin-left-5" target="_blank">Facebook</a>
-	    <a href="https://www.instagram.com/legaldesignfi/" class="icon instagram col-3 margin-right-5 margin-left-5" target="_blank">Instagram</a>
+	    <a href="https://www.instagram.com/legaldesignsummit/" class="icon instagram col-3 margin-right-5 margin-left-5" target="_blank">Instagram</a>
 	    <a href="https://twitter.com/legaldesignFI" class="icon twitter col-3 margin-left-5" target="_blank">Twitter</a>
 	  </div>
 	</div>
