--- a/program.html
+++ b/program.html
@@ -100,7 +100,7 @@
 	      <div class="row col">
 		<a href="https://www.linkedin.com/company/10936008/" class="icon linkedin col-3 margin-right-5" target="_blank">LinkedIn</a>
 		<a href="https://www.facebook.com/legaldesignsummit/" class="icon facebook col-3 margin-right-5 margin-left-5" target="_blank">Facebook</a>
-		<a href="https://www.instagram.com/legaldesignfi/" class="icon instagram col-3 margin-right-5 margin-left-5" target="_blank">Instagram</a>
+		<a href="https://www.instagram.com/legaldesignsummit/" class="icon instagram col-3 margin-right-5 margin-left-5" target="_blank">Instagram</a>
 		<a href="https://twitter.com/legaldesignFI" class="icon twitter col-3 margin-left-5" target="_blank">Twitter</a>
 	      </div>
 	    </div>
