bug fix, wrong email address for eero

--- a/about-us.html
+++ b/about-us.html
@@ -183,7 +183,7 @@
           </div>
           <div class="col-md-4 col-xs-12">
             <div class="justify-center"> <h3 style="font-size: 25px;">Website</h3></div>
-            <div class="image"><a href="mailto:marika.nieminen@legaldesignsummit.com"><img src="images/team/team-2023/eero-kemppinen.jpg"></a></div>
+            <div class="image"><a href="mailto:eero.kemppinen@legaldesignsummit.com"><img src="images/team/team-2023/eero-kemppinen.jpg"></a></div>
             <p>Eero Kemppinen<br><span class="small"></p>
             <p class="margin-bottom-0"><a href="https://www.linkedin.com/in/eero-kemppinen-181982234/" class="icon linkedin">LinkedIn</a></span></p>
           </div>
