updated about page, added new speaker and one partnership, introduced a prototype of new footer, next is to make it just controlable in one place

--- a/index.html
+++ b/index.html
@@ -451,6 +451,7 @@
 	<li class="flex-item" style="width: 300px;"><a href="https://tuomioistuinvirasto.fi/en/index.html" target="_blank"><img src="images/collabs/tuomioistuinvirasto.png"></a></li>
 	<li class="flex-item" style="width: 215px;"><a href="https://juristiliitto.fi/" target="_blank"><img src="images/collabs/Juristiliitto.png"></a></li>
 	<li class="flex-item" style="width: 175px;"><a href="https://asianajajaliitto.fi/" target="_blank"><img src="images/collabs/Asianajajaliitto.png"></a></li>
+	<li class="flex-item" style="width: 350px;"><a href="https://www.ulapland.fi/EN" target="_blank"><img src="images/collabs/lapin-yliopisto.png"></a></li>
   </ul>
 
 </div>
