moved footer to specific global file

--- a/index.html
+++ b/index.html
@@ -491,8 +491,8 @@
 	</div>
       </div>
     </div>
+	<a href="#" class="scroll-up" style="padding-top: 30px; padding-bottom: 10px; margin-bottom: 0px;"></a>
   </div>
-  <a href="#" class="scroll-up"></a>
 </div>
 </body>
 </html>
