new logos, changed ticket sale to ticket waitlist

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 				<div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30" style="margin-bottom: 10px;"><a href="https://forms.gle/DFXyqfFzFNtKD3n39" class="btn light">Call for Speakers Open Now!</a></div>
 		</div>
 		<div class="row">
-		  	<div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="tickets.html" class="btn light">Tickets are out!</a></div>
+		  	<div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="tickets.html" class="btn light">Join the ticket waitlist!</a></div>
 			</div>
 	    </div>
 
@@ -452,6 +452,10 @@
 	<li class="flex-item" style="width: 215px;"><a href="https://juristiliitto.fi/" target="_blank"><img src="images/collabs/Juristiliitto.png"></a></li>
 	<li class="flex-item" style="width: 175px;"><a href="https://asianajajaliitto.fi/" target="_blank"><img src="images/collabs/Asianajajaliitto.png"></a></li>
 	<li class="flex-item" style="width: 350px;"><a href="https://www.ulapland.fi/EN" target="_blank"><img src="images/collabs/lapin-yliopisto.png"></a></li>
+	<li class="flex-item" style="width: 300px;"><a href="https://sjquinney.utah.edu/" target="_blank"><img src="images/collabs/college-of-law-logolcolor.jpg"></a></li>
+	<li class="flex-item" style="width: 300px;"><a href="https://www.lancaster.ac.uk/law/" target="_blank"><img src="images/collabs/lancaster-logo-2.PNG"></a></li>
+	<li class="flex-item" style="width: 170px;"><a href="https://www.helsinki.fi/en/networks/legal-tech-lab" target="_blank"><img src="images/collabs/helsinki-legal-tech-lab.png"></a></li>
+	<li class="flex-item"><a href="https://www.elegal.technology/" target="_blank"><img src="images/collabs/logo-eLegal.png"></a></li>
   </ul>
 
 </div>
