--- a/footer.html
+++ b/footer.html
@@ -31,7 +31,7 @@
       <li class="flex-item" style="width: 160px;"><a><img src="images/collabs/nu-law.png"></a></li>
       <li class="flex-item" style="width: 200px;"><a><img src="images/collabs/LITE-Lab.jpg"></a></li>
       <li class="flex-item" style="width: 180px;"><a><img src="images/collabs/universidad-uch.png"></a></li>
-      <li class="flex-item" style="width: 220px;"><a><img src="images/collabs/Escuela-de-Practica-Juridica.png"></a></li>
+      <li class="flex-item" style="width: 200px;"><a><img src="images/collabs/Escuela-de-Practica-Juridica.png"></a></li>
       <li class="flex-item" style="width: 150px;"><a><img src="images/collabs/thinklegaltech.png"></a></li>
       <li class="flex-item" style="width: 120px;"><a><img src="images/collabs/stanford.png"></a></li>
       <li class="flex-item" style="width: 160px;"><a><img src="images/collabs/LOGO-EUI-full.png"></a></li>
@@ -39,6 +39,10 @@
       <li class="flex-item" style="width: 100px;"><a><img src="images/collabs/Juristiliitto.png"></a></li>
       <li class="flex-item" style="width: 80px;"><a><img src="images/collabs/Asianajajaliitto.png"></a></li>
       <li class="flex-item" style="width: 230px;"><a><img src="images/collabs/lapin-yliopisto.png"></a></li>
+      <li class="flex-item" style="width: 200px;"><img src="images/collabs/college-of-law-logolcolor.jpg"></a></li>
+      <li class="flex-item" style="width: 200px;"><img src="images/collabs/lancaster-logo-2.PNG"></a></li>
+      <li class="flex-item" style="width: 70px;"><img src="images/collabs/helsinki-legal-tech-lab.png"></a></li>
+      <li class="flex-item"><img src="images/collabs/logo-eLegal.png"></a></li>
       </ul>
     </div>
     <!-- Content Main Section Ends -->
