--- a/tickets.html
+++ b/tickets.html
@@ -106,11 +106,11 @@
 
 	  <div class="margin-top-40"></div>
 
-	  <h4>TICKETS FOR THE SUMMIT ARE OUT NOW – GET YOURS NOW BEFORE THEY ARE GONE!</h4>
+	  <h4>We are currently fully booked, but don't worry - you can still join the waiting list and be the first to know if any spots become available!</h4>
       <!-- <div style="height: 30px;" div class="margin-top-40"><h4><a href="https://ti.to/legal-design-summit-2023/legal-design-summit-2023" style="color: #50cec1;" class="link-hover">Link to the ticket site</a></h4></div> -->
       <div class="actions">
         <div class="row">
-      <div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="https://ti.to/legal-design-summit-2023/legal-design-summit-2023" class="btn light">Get your tickets</a></div>
+      <div class="col-sm-12 justify-center-xs justify-center padding-top-xs-30"><a href="https://ti.to/legal-design-summit-2023/legal-design-summit-2023" class="btn light">Join the ticket waitlist</a></div>
         </div>
       </div>
     <p style="margin-top: 100px;"></p>
